# autonomous_build_day

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
autonomy/: __init__.py  agent.py  executor.py  groot_client.py  lerobot_adapter.py  perception.py  perception_providers.py  planner.py  policy_router.py  robot_interface.py  sim_robot.py  telemetry.py  telemetry_http.py  types.py
livekit/: common.css  judge_dashboard.html  robot_publisher.html
scripts/: run_demo.py  run_real_robot.py  run_trials.py  start_competition.sh
scripts/groot/: collect_data.sh  deploy.sh  finetune.sh  prepare_data.py
services/livekit/: README.md  package.json  token_server.mjs
web/: package-lock.json  package.json
web/app/: DashboardContent.tsx  globals.css  layout.tsx  page.tsx  types.ts
web/app/components/: ConnectionBar.tsx  PlanTimeline.tsx  RobotStateGauges.tsx  Scoreboard.tsx  StatusPanel.tsx  VideoFeed.tsx  WorldSnapshot.tsx
web/app/hooks/: useTelemetry.ts
